bigram using neural network

--- a/makemore/notebooks/makemore-bigram.ipynb
+++ b/makemore/notebooks/makemore-bigram.ipynb
@@ -654,7 +654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "0cb5f5d1-287f-4779-a4e9-8bfa9f55a641",
    "metadata": {},
    "outputs": [],
@@ -664,7 +664,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "a0d1c010-76ae-4abf-b8d8-999b1283e40c",
    "metadata": {},
    "outputs": [],
@@ -691,7 +691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "594fc55c-c200-407d-81b3-3551b3efd68d",
    "metadata": {},
    "outputs": [
@@ -722,7 +722,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "id": "383dde70-fcd3-4130-89ce-2976ba3fe29d",
    "metadata": {},
    "outputs": [
@@ -730,7 +730,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Generating total samples 32033\n"
+      "Generating total samples 32033\n",
+      "[0, 4337, 1312, 1553, 1706, 1521, 428, 680, 907, 573, 2438, 3015, 1540, 2585, 1083, 395, 524, 89, 1662, 2042, 1288, 69, 402, 284, 144, 533, 923]\n",
+      "tensor([   0, 4410, 1306, 1542, 1690, 1531,  417,  669,  874,  591, 2422, 2963,\n",
+      "        1572, 2538, 1146,  394,  515,   92, 1639, 2055, 1308,   78,  376,  307,\n",
+      "         134,  535,  929], dtype=torch.int32)\n"
      ]
     }
    ],
@@ -757,15 +761,15 @@
     "    counts[ch] = counts.get(ch, 0) + 1\n",
     "\n",
     "# Generated samples mapping from characters to array, so that we can check against tensor first row\n",
-    "#samples = [counts[itoch[i]] for i in range(27)]\n",
-    "#print(samples)\n",
-    "#print(N[0])\n",
+    "samples = [counts[itoch[i]] for i in range(27)]\n",
+    "print(samples)\n",
+    "print(N[0])\n",
     "# you can observe the all characters counts are same in samples array and N[0] tensor."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "7263cec6-9d5b-4036-b292-7d8dfdd1df4e",
    "metadata": {},
    "outputs": [
@@ -773,16 +777,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "d.\n",
-      "palama.\n",
-      "maavadukwe.\n",
-      "toonaynndah.\n",
-      "se.\n",
-      "sijelyea.\n",
-      "lyn.\n",
-      "arel.\n",
-      "gion.\n",
-      "kpere.\n"
+      "cexze.\n",
+      "momasurailezitynn.\n",
+      "konimittain.\n",
+      "llayn.\n",
+      "ka.\n",
+      "da.\n",
+      "staiyaubrtthrigotai.\n",
+      "moliellavo.\n",
+      "ke.\n",
+      "teda.\n"
      ]
     }
    ],
@@ -800,7 +804,7 @@
     "P /= P.sum(1, keepdim=True) # keep all probability distributions for each row.\n",
     "\n",
     "# use the Generator.\n",
-    "g = torch.Generator().manual_seed(2147483643) # try to change the seed value and see the difference between generated values.\n",
+    "g = torch.Generator().manual_seed(2147483647) # try to change the seed value and see the difference between generated values.\n",
     "\n",
     "for i in range(10): # number sample strings to generate. This is for testing.\n",
     "    out = []\n",
@@ -816,7 +820,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "158f3696-acd4-4700-8765-c3861da197da",
    "metadata": {},
    "outputs": [
@@ -836,6 +840,7 @@
     "log_likelihood = 0\n",
     "for word in words:\n",
     "    chs = ['.'] + list(word) + ['.']\n",
+    "    #print(chs)\n",
     "    for ch1, ch2 in zip(chs, chs[:1]):\n",
     "        prob = P[chtoi[ch1], chtoi[ch2]]\n",
     "        logprob = torch.log(prob) #log likelihood \n",
@@ -845,6 +850,121 @@
     "print(f'log likelihood: %.4f', log_likelihood)\n",
     "print(f'nll: %.4f', nll)\n",
     "print(f'nll: %.4f', nll/n)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "1a68fea1-b619-4767-afd5-1f6b5ba1f27d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "xs torch.Size([228146]) ys torch.Size([228146])\n",
+      "number of elements 228146\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Implemenet using neural net.\n",
+    "# create the data set.\n",
+    "xs = []\n",
+    "ys = []\n",
+    "for word in words:\n",
+    "    chs = ['.'] + list(word) + ['.']\n",
+    "    for ch1, ch2 in zip(chs, chs[1:]):\n",
+    "        xs.append(chtoi[ch1])\n",
+    "        ys.append(chtoi[ch2])\n",
+    "xs = torch.tensor(xs)\n",
+    "ys = torch.tensor(ys)\n",
+    "xslength = xs.nelement()\n",
+    "print(f\"xs {xs.shape} ys {ys.shape}\")\n",
+    "print(\"number of elements\", xslength)\n",
+    "\n",
+    "g = torch.Generator().manual_seed(2147483647)\n",
+    "W = torch.randn((27, 27), requires_grad=True, generator=g) #weights initialized from normalized distribution."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "ae16a499-0e10-4734-936e-f6c04a7295a8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.480417490005493\n"
+     ]
+    }
+   ],
+   "source": [
+    "# graient descent. NN optimization.\n",
+    "# 1. multiply xenc & weights\n",
+    "# 2. convert them into counts.\n",
+    "# 3. calculate probabilities (normalize)\n",
+    "# 4. calculate loss function.\n",
+    "# 5. back prop\n",
+    "\n",
+    "import torch.nn.functional as F\n",
+    "xenc = F.one_hot(xs, num_classes=27).float()\n",
+    "\n",
+    "for i in range(100):\n",
+    "    #forward pass\n",
+    "    logits = xenc @ W # wx+b (b = 0) call these values as logits. \n",
+    "    counts = logits.exp() # exponential so that we get them as counts. equivalent to N\n",
+    "    probs = counts / counts.sum(1, keepdim=True)\n",
+    "    loss = -probs[torch.arange(xslength), ys].log().mean() + 0.01*(W**2).mean()\n",
+    "    # probs[torch.arange(xslength), ys] gives the corresponding probability for each index for given label ys prediction.\n",
+    "    # 0.01*(W**2).mean() - smoothing. aka regularization of loss. to converge the value to zero. same P = (N+1)\n",
+    "\n",
+    "    # backward pass\n",
+    "    W.grad = None\n",
+    "    loss.backward()\n",
+    "\n",
+    "    W.data += -50 * W.grad\n",
+    "print(loss.item())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "25367366-edd7-4bf4-8cf3-6d3813a74db5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "zisaryliylwey.\n",
+      "koreslya.\n",
+      "kanonabisarereeraya.\n",
+      "s.\n",
+      "br.\n"
+     ]
+    }
+   ],
+   "source": [
+    "#output\n",
+    "g = torch.Generator().manual_seed(21474836447)\n",
+    "\n",
+    "for i in range(5):  \n",
+    "    out = []\n",
+    "    idx = 0\n",
+    "    while True:\n",
+    "        xenc = F.one_hot(torch.tensor([idx]), num_classes=27).float() # here you have to keep in loop as the index keep getting updated and the next value is predicted.\n",
+    "        logits = xenc @ W # predict\n",
+    "        counts = logits.exp() # counts, equivalent to N\n",
+    "        probs = counts / counts.sum(1, keepdims=True) # probabilities for next character\n",
+    "        \n",
+    "        idx = torch.multinomial(probs, num_samples=1, replacement=True, generator=g).item()\n",
+    "        out.append(itoch[idx])\n",
+    "        if idx == 0:\n",
+    "          break\n",
+    "    print(''.join(out))"
    ]
   }
  ],
