--- a/makemore/notebooks/makemore-micrograd.ipynb
+++ b/makemore/notebooks/makemore-micrograd.ipynb
@@ -1392,7 +1392,7 @@
     "# define MLP, init, call, parameter.\n",
     "class MLP:\n",
     "    def __init__(self, nin, nouts):\n",
-    "        sz = [nin] + nouts\n",
+    "        sz = [nin] + nouts # input + hidden layers.\n",
     "        self.layers = [Layer(sz[i], sz[i+1]) for i in range(len(nouts))]\n",
     "    def __call__(self, x):\n",
     "        for layer in self.layers:\n",
@@ -1422,7 +1422,7 @@
    ],
    "source": [
     "x = [2.0, 3.0, -1.0]\n",
-    "n = MLP(3, [4, 4, 1])\n",
+    "n = MLP(3, [4, 4, 1]) # 4 + 4 + 1 hidden layers 3 input sequences.\n",
     "n(x)"
    ]
   },
